--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -36,63 +36,114 @@ nav.hide-for-large.pad--sm.container-color--blue-alt
       .columns.small-12.medium-7
         img.float-right-on-medium alt=("Datica Platform Architecture") src="/assets/img/platform_iso_architecture-2x.png"
 
-
-section.section-article.container-gray-12
-  .row.align-center
-    .columns.small-12.medium-10.large-9.text-center
-      h1.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
-      p.lead
-        | The Datica Platform fills the compliance gaps on top of public clouds like AWS and Azure by combining the best technology available and mapping it to frameworks like HIPAA, HITRUST, GDPR, and GxP. Customers use Kubernetes-enabled orchestration to deploy containerized workloads to the Platform that are
-        strong guaranteed to be continuously compliant.
-      = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white" }
-
-section.section-article.container-color--dark-grad-blue
-  .row.hide-for-large.group.align-center
-    .columns.small-12.medium-8
-      ul#tier-tabs.tabs data-tabs=""
-        li.tabs-title.is-active
-          a aria-selected="true" href="#tierHosted"  Hosted
-        li.tabs-title
-          a data-tabs-target="tierLicensed" href="#tierLicensed"  Licensed
-      .tabs-content data-tabs-content="tier-tabs"
-        #tierHosted.tabs-panel.tier-panel.is-active
-          .text--white Hosted content
-        #tierLicensed.tabs-panel.tier-panel.drop
-          .text--white Licensed content
-  .show-for-medium
-    .row.align-center
-      - data.views.platform.tiers.each do |tier|
-        .columns.small-6.medium-6
-          h2.headline-2= tier.title
-          h3.headline-3.subhead--spaced= tier.subhead
-          h4.headline-4= tier.price
-    - data.views.platform.tier_points_paired.each_with_index do |dyad, i|
+.container-color--gray-light
+  .container-image--center(data-interchange="[/public/icons/inlined/art/consumption-bg.svg, small]")
+    section.section-article
+      .row.align-center.text-center
+        .columns.small-12
+          h1.headline-2.group Models that <strong>work</strong> for any business
+      .row
+        .columns.small-12.medium-6
+          .callout.drop
+            h2.headline-3.group Hosted
+            p.headline-4 <strong>Maximum Convenience</strong>
+            p.lead.highlight Starting at $999 / month
+            p Deploy containerized (or let the platform do the containerizing for you) workloads to our multi-tenant Platform through self-service tooling. Customers interact with Datica support and billing.
+            p Customers prefer this option when speed and convenience matter most while not sacrificing the best compliance approach on the cloud.
+            p.headline-4 <strong>The Hosted Model Works Great For&hellip;</strong>
+            ul
+              li Startups looking to develop quickly while also getting instant security and compliance credibility.
+              li Enterprise teams who need to move quickly but constrained by internal IT, security, and compliance groups.
+            p Other Platform-as-a-Service options do not cover the full scope of HIPAA compliance. None cover HITRUST, GxP, and GDPR. Compare [Our BAA] to other options when researching.
+        .columns.small-12.medium-6
+          .callout.drop
+            h2.headline-3.group Licensed
+            p.headline-4 <strong>Maximum Flexibility</strong>
+            p.lead.highlight Starting at $40,000 / year
+            p Install the Datica Platform on your existing AWS or Azure account, then deploy containerized workloads onto it for continuous compliance.
+            p Customers prefer this option when full control over AWS or Azure accounts matters most, while still receiving the same compliance assurances from the Platform.
+            p.headline-4 <strong>The Licensed Model Works Great For&hellip;</strong>
+            ul
+              li Engineering orgs who need compliance guarantees but can’t build everything themselves for less than one cloud engineer FTE.
+              li Teams who need compliance help but have a hard requirement to directly own their AWS or Azure accounts.
+            p All other installable technologies aren’t platforms meant to greatest compliance coverage with the best experience. Instead, you pay for consultant service fees.
+/
+  This section below is commented out. I left it around in case we wanted to re-use the partial and templating code above.
+/
+  section.section-article
+    .row.hide-for-large.group.align-center
+      .columns.small-12.medium-8
+        ul#tier-tabs.tabs data-tabs=""
+          li.tabs-title.is-active
+            a aria-selected="true" href="#tierHosted"  Hosted
+          li.tabs-title
+            a data-tabs-target="tierLicensed" href="#tierLicensed"  Licensed
+        .tabs-content data-tabs-content="tier-tabs"
+          #tierHosted.tabs-panel.tier-panel.is-active
+            .text--white Hosted content
+          #tierLicensed.tabs-panel.tier-panel.drop
+            .text--white Licensed content
+    .show-for-medium
       .row.align-center
-        - dyad.each do |point|
+        - data.views.platform.tiers.each do |tier|
           .columns.small-6.medium-6
-            = Kramdown::Document.new(point).to_html
-    hr.content/
-    .row.align-center
-      - data.views.platform.tiers.each do |tier|
-        .columns.medium-6
-          = partial "partials/snippets/button", :locals => { :label => tier.cta.label, :title => tier.cta.label, :url => tier.cta.url, :button_classes => tier.cta.classes, :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
-section.section-article.container-image--fixed.container-color--blue-bright-noise
-  .row.align-middle
-    .columns.small-12.medium-8.large-7
-      h2.headline-3 You wouldn't build payment processing infrastructure to charge credit cards. You'd use Stripe.
-      h3.headline-4.group So why waste money and take on unnecessary risk building your own compliance layer?
-      img.float-right-on-medium.logo-size--xlarge alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
-      h4.headline-6.spaced-out Learn more about Datica on AWS
-      ul.group
-        li
-          a.link--white href="#" Shared Responsibility overview
-        li
-          a.link--white href="#" Explanation of what the Platform does on top of AWS
-        li
-          a.link--white href="#" Total Cost of Ownership guide vs. building something similar yourself on AWS
-        li Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.
-      .text-right
-        = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/discover/aws-hipaa", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }
+            h2.headline-2= tier.title
+            h3.headline-3.subhead--spaced= tier.subhead
+            h4.headline-4= tier.price
+      - data.views.platform.tier_points_paired.each_with_index do |dyad, i|
+        .row.align-center
+          - dyad.each do |point|
+            .columns.small-6.medium-6
+              = Kramdown::Document.new(point).to_html
+      hr.content/
+      .row.align-center
+        - data.views.platform.tiers.each do |tier|
+          .columns.medium-6
+            = partial "partials/snippets/button", :locals => { :label => tier.cta.label, :title => tier.cta.label, :url => tier.cta.url, :button_classes => tier.cta.classes, :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
+
+/
+  Compliance shared Responsibility animation
+
+section.section-article.container-color--dark-alt
+  .row.group.align-center
+    .columns.small-12
+      h2.headline-3.group.text-center.spaced-out Understanding Shared Responsibility
+      script async="" src="https://fast.wistia.com/embed/medias/08ebxufc4q.jsonp"
+      script async="" src="https://fast.wistia.com/assets/external/E-v1.js"
+      .wistia_responsive_padding style=("padding:56.25% 0 0 0;position:relative;")
+        .wistia_responsive_wrapper style="height:100%;left:0;position:absolute;top:0;width:100%;"
+          .wistia_embed.wistia_async_08ebxufc4q class=("seo=false videoFoam=true") style="height:100%;width:100%"   
+  .row.align-center
+    - data.views.platform.shared_responsibility.each do | block |
+      .columns.small-12.medium-4
+        = Kramdown::Document.new(block).to_html
+
+.container-image--fixed.container-color--dark
+  .container-image--center(data-interchange="[/public/icons/inlined/art/aws-apn-bg.svg, small]")
+    section.section-article
+      .row.align-middle.align-center
+        .columns.small-12.medium-8
+          h2.headline-3.text-center
+            | You wouldn't build payment processing infrastructure to charge credit cards.
+            br/
+            | You'd use Stripe.
+      .row.align-middle.align-center
+        .columns.small-12.medium-8
+          .row.align-middle.align-center
+            .columns.small-12.medium-6
+              p.lead.group <strong>So why waste money and take on unnecessary risk building your own compliance layer?</strong>
+              p Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.
+              img.logo-size--xlarge alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
+            .columns.small-12.medium-6
+              ul.group
+                li
+                  a.link--white href="#" Shared Responsibility overview
+                li
+                  a.link--white href="#" Explanation of what the Platform does on top of AWS
+                li
+                  a.link--white href="#" Total Cost of Ownership guide vs. building something similar yourself on AWS
+              .group
+                = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/discover/aws-hipaa", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }
 
 section.section-article
   #companies.row.align-center
@@ -104,34 +155,37 @@ section.section-article
       = partial "partials/snippets/button", :locals => { :label => "Read Customer Success Stories", :title => "View Platform pricing", :url => "/platform/success", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
 
         i.fa.fa-icon.fa-angle-right
+
 section#tech-hcms.section-article.container-color--dark-grad-blue
   .row.align-center
     .columns.small-12
-      .callout.callout--large.callout--gray-light
-        .row.align-center
-          .columns.small-12.text-center.group
-            h2.headline-4.spaced-out How Customers Use the Datica Platform
-        .row.align-center
-          .columns.small-12.text-center.group
-            h2.headline-3.nomargin Building On The Platform
-        .row.align-center.align-bottom
-          - data.views.platform.platform_use.each do | step |
-            .columns.small-12.medium-4
-              img.pad alt="#{step.title}" src="#{step.image}?w=500"
-        .row.align-center.group
-          - data.views.platform.platform_use.each do | step |
-            .columns.small-12.medium-4
-              h4.headline-5= step.title
-              p= step.desc
-              = partial "partials/snippets/button", :locals => { :label => step.button.label, :title => step.button.label, :url => step.button.url, :button_classes => "button small secondary", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
-        .row.align-center
-          .columns.small-12.text-center.group
-            h2.headline-3.nomargin Healthcare Compliance Management System
-        .row.align-center
-          .columns.small-12.medium-6.large-7
-            img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/3wzJLEqLHqs4kC2cAk4Msq/1131a6ae3d921e934fa8effa21802b35/hcms-dashboard.png?w=1200" /
-          .columns.small-12.medium-6.large-4
-            p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across all customer environments.
+      .row.align-center
+        .columns.small-12.text-center.group
+          h2.headline-4.spaced-out How Customers Use the Datica Platform
+      .row.align-center
+        .columns.small-12.text-center.group
+          h2.headline-3.nomargin Building On The Platform
+      .row.align-center.align-bottom
+        - data.views.platform.platform_use.each do | step |
+          .columns.small-12.medium-4
+            img.pad.build-height alt="#{step.title}" src="#{step.image}?w=500"
+      .row.align-center.group
+        - data.views.platform.platform_use.each do | step |
+          .columns.small-12.medium-4
+            h4.headline-5= step.title
+            p= step.desc
+            = partial "partials/snippets/button", :locals => { :label => step.button.label, :title => step.button.label, :url => step.button.url, :button_classes => "button small secondary", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
+
+section.section-article
+  .row.align-center
+    .columns.small-12.text-center.group
+      h2.headline-3.nomargin Healthcare Compliance Management System
+  .row.align-center
+    .columns.small-12.medium-6.large-7
+      img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/3wzJLEqLHqs4kC2cAk4Msq/1131a6ae3d921e934fa8effa21802b35/hcms-dashboard.png?w=1200" /
+    .columns.small-12.medium-6.large-4
+      p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across all customer environments.
+
 
 aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
   .row.align-center
