Moving images to contentful

--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -34,7 +34,7 @@ nav.hide-for-large.pad--sm.container-color--blue-alt
           strong guaranteed to be continuously compliant.
         = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white" }
       .columns.small-12.medium-7
-        img.float-right-on-medium alt=("Datica Platform Architecture") src="/assets/img/platform_iso_architecture-2x.png"
+        img.float-right-on-medium alt=("Datica Platform Architecture") src="https://images.contentful.com/189dvqdsjh46/6vT9Mx9TlmoEAiGcOkwG24/b4f31fda3c1b6fcd6aeb5f926ce3979a/platform_iso_architecture-2x.png"
 
 .container-color--gray-light
   .container-image--center(data-interchange="[/public/icons/inlined/art/consumption-bg.svg, small]")
