--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -182,7 +182,7 @@ section.section-article
       h2.headline-3.nomargin Healthcare Compliance Management System
   .row.align-center
     .columns.small-12.medium-6.large-7
-      img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/3wzJLEqLHqs4kC2cAk4Msq/1131a6ae3d921e934fa8effa21802b35/hcms-dashboard.png?w=1200" /
+      img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2Qi56nnHu0iqMkmag8iGWs/1d008b8cb12ac5cf5546ebc9cccc1758/hcms-mockups-2x.png" /
     .columns.small-12.medium-6.large-4
       p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across all customer environments.
 
