--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -175,16 +175,22 @@ section#tech-hcms.section-article.container-color--dark-grad-blue
             h4.headline-5= step.title
             p= step.desc
             = partial "partials/snippets/button", :locals => { :label => step.button.label, :title => step.button.label, :url => step.button.url, :button_classes => "button small secondary", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
-
-section.section-article
-  .row.align-center
-    .columns.small-12.text-center.group
-      h2.headline-3.nomargin Healthcare Compliance Management System
-  .row.align-center
-    .columns.small-12.medium-6.large-7
-      img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2Qi56nnHu0iqMkmag8iGWs/1d008b8cb12ac5cf5546ebc9cccc1758/hcms-mockups-2x.png" /
-    .columns.small-12.medium-6.large-4
-      p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across all customer environments.
+.container-color--gray-light
+  .container-image--center(data-interchange="[/public/icons/inlined/art/hcms-bg.svg, small]")
+    section.section-article
+      .row.align-center
+        .columns.small-12.text-center.group
+          h2.headline-4.spaced-out Healthcare Compliance Management System
+      .row.align-center
+        .columns.small-12.text-center.group
+          h2.headline-3.nomargin Exposing critical compliance controls
+      .row.align-center.align-middle
+        .columns.small-12.medium-6.large-7
+          img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png" /
+          .callout.drop
+            p.lead.highlight.text-center Continuous <strong>compliance</strong>, delivered.
+            p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across customer environments.
+            p The HCMS is shipping with initial versions of our Licensed Platform. To learn more about the HCMS, <a href="/contact">schedule time to talk with us today</a>.
 
 
 aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
