Started on the tech page

--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -54,7 +54,7 @@ nav.hide-for-large.pad--sm.container-color--blue-alt
             ul
               li Startups looking to develop quickly while also getting instant security and compliance credibility.
               li Enterprise teams who need to move quickly but constrained by internal IT, security, and compliance groups.
-            p Other Platform-as-a-Service options do not cover the full scope of HIPAA compliance. None cover HITRUST, GxP, and GDPR. Compare [Our BAA] to other options when researching.
+            p Other Platform-as-a-Service options do not cover the full scope of HIPAA compliance. None cover HITRUST, GxP, and GDPR. Compare <a href="https://policy.datica.com/#23-datica-hipaa-business-associate-agreement-baa"> Our BAA</a> to other options when researching.
         .columns.small-12.medium-6
           .callout.drop
             h2.headline-3.group Licensed
