--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -84,6 +84,10 @@ figcaption{
     text-align: center;
 }
 
+.html5-video-full-width{
+  width: 100%;
+}
+
 // .container--image-fit {
 //     position: relative;
 //     overflow: hidden;
