--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -16,6 +16,11 @@
   max-height: 155px;
 }
 
+// Add a border to the bottom of the "How the Platform Works" images
+img.soft-border{
+  border-bottom: 1px solid $color_light;
+}
+
 @include keyframes( expando ) {
     0% {
         // height: 0px;
