--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -15,49 +15,69 @@ collectionOrder: 2
 ctaCustom: true
 ---
 
-svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
   defs
-    symbol#icon-chevron-down viewbox=("0 0 18 18") 
+    symbol#icon-chevron-down viewbox=("0 0 18 18")
       title chevron-down
-      path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z") 
+      path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
 aside.hide-for-large.pad--sm.container-color--blue-alt
   .row.align-middle.align-center
     .columns.small-6.medium-4
-      a.button.hollow-inverted.expanded.small.nomargin href="/platform/compliance" title=("Learn about integrations") 
+      a.button.hollow-inverted.expanded.small.nomargin href="/platform/compliance" title=("Learn about integrations")
         | Integrations
         i.fa.fa-angle-right
     .columns.small-6.medium-4
-      a.button.button--light.expanded.small.nomargin href="/pricing" title=("sign up") 
+      a.button.button--light.expanded.small.nomargin href="/pricing" title=("sign up")
         | Pricing
         i.fa.fa-icon.fa-angle-right
-section#tech.section-article
-  .row.align-center
-    .columns.small-12.medium-10.large-7.text-center
-      h1.headline-3.group We focus on the <strong>Compliant Ops</strong>, so you can focus on your <strong>Apps</strong>
-      = partial "partials/snippets/button", :locals => { :label => "See how Datica solves Compliance", :url => "/platform/compliance", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white" }
-
-section.container-color--dark-alt style=("background-color: #23272C") 
-  video#vid-platform-diagram.html5-video-responsive autoplay="" loop="" muted="" playsinline="" poster="https://images.contentful.com/189dvqdsjh46/22M5QwAz0EAuuqyigwgKc6/5193b08c622f99caf35eaccb4bc85799/Datica_Platform_Diagram_animation_2018_poster.png" 
-    source src="https://videos.contentful.com/189dvqdsjh46/6FV36Yd2JqYgCIgwGucKAm/ea208e44be2fbed57849c51db0bf5233/Datica_Platform_Diagram_animation_2018_02.m4v" type="video/mp4" 
-  .section-article style=("padding-top: 1rem;") 
+/
+  section#tech.section-article
     .row.align-center
-      .columns.small-12.large-8
-        h2.headline-4.spaced-out.text-center.group How the Platform Works
-        .multicol-2
-          markdown:
-            AWS and Azure provide VPCs, which cover a portion of compliance and security requirements.
+      .columns.small-12.medium-10.large-7.text-center
+        h1.headline-3.group We focus on the <strong>Compliant Ops</strong>, so you can focus on your <strong>Apps</strong>
+        = partial "partials/snippets/button", :locals => { :label => "See how Datica solves Compliance", :url => "/platform/compliance", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white" }
 
-            Within a VPC, the Datica Platform is installed. Everything within the Platform is strictly managed in adherence to Datica policies. The Platform uses a combination of Kubernetes and proprietary technology to orchestrate all DevOps duties for customers.
+section.container-color--dark-alt style=("background-color: #23272C")
+  .container-image--center(data-interchange="[/public/icons/inlined/art/platform-tech-bg.svg, small]")
+    section.section-article
+      .row.align-center
+        .columns.small-12
+          .row.align-center
+            .columns.small-12.medium-8
+              h1.headline-2.text-center Platform Technology
+              p.text-center.group See how the Platform works, the technology involved, and what it means to be HITRUST CSF certified on top of cloud providers like AWS and Azure.
+          .row.row--card-grid
+            .columns.small-12.medium-12.large-4
+              .card.drop.container-color--gray-light
+                img src="https://images.contentful.com/189dvqdsjh46/6ydXBtXKRU2Yu0mmsgYCcY/a16c46029da27d0b379fcc69fad5b05b/layer-infra.png" alt="Infrastructure Layer" class="soft-border"
+                .card-section
+                  p.lead.text-center <strong>Infrastructure Layer</strong>
+                  p AWS and Azure provide VPCs, which cover a portion of compliance and security requirements.
+                  p Within a VPC, the Datica Platform is installed. Everything within the Platform is strictly managed in adherence to Datica policies. The Platform uses a combination of Kubernetes and proprietary technology to orchestrate all DevOps duties for customers.
+            .columns.small-12.medium-12.large-4
+              .card.drop.container-color--gray-light
+                img src="https://images.contentful.com/189dvqdsjh46/5cUz9cCIPSCag0CiQi44u4/b450448536c2d754573266b59bd8ea7d/layer-platform.png" alt="Platform Layer" class="soft-border"
+                .card-section
+                  p.lead.text-center <strong>Platform Layer</strong>
+                  p Customers create an account within the Datica Platform. It is through the account that they gain access to HIPAA-eligible AWS Primitives or Azure Services, which are strictly controlled by the Platform.
+                  p Within a customer account, the Platform containerizes all technology required to meet compliance controls from HIPAA, HITRUST, GDPR, and GxP. Things like logging, intrusion detection, and penetration testing, to name a few.
+            .columns.small-12.medium-12.large-4
+              .card.drop.container-color--gray-light
+                img src="https://images.contentful.com/189dvqdsjh46/6bDMG7j3VYuoYkwEK4OkC2/5fcb3139b6401fbd1262f5f4285fc3a6/layer-app.png" alt="Application Layer" class="soft-border"
+                .card-section
+                  p.lead.text-center <strong>Application Layer</strong>
+                  p Customers deploy their applications to containerized environments. They can have multiple environments within their Datica account, managing any type of technical use case.
+                  p Administration of AWS Primitives or Azure Services are no longer required. Instead, customers simply allocate RAM to individual containers. Datica takes care of the rest.
+                  p Deployment is done either through a <code>git push</code> buildpack-based process or by pushing custom Docker containers.
 
-            Customers create an account within the Datica Platform. It is through the account that they gain access to HIPAA-eligible AWS Primitives or Azure Services, which are strictly controlled by the Platform.
-
-            Within a customer account, the Platform containerizes all technology required to meet compliance controls from HIPAA, HITRUST, GDPR, and GxP. Things like logging, intrusion detection, and penetration testing, to name a few.
-
-            Customers deploy their applications to containerized environments. They can have multiple environments within their Datica account, managing any type of technical use case.
-
-            Administration of AWS Primitives or Azure Services are no longer required. Instead, customers simply allocate RAM to individual containers. Datica takes care of the rest.
-
-            Deployment is done either through a `git push` buildpack-based process or by pushing custom Docker containers.
+      .row.align-center
+        .columns.small-12.medium-8
+          h1.headline-2.text-center Platform Architecture
+          p.text-center.group See where each piece of the Platform fits, from logging and monitoring, to networking and load balancing. The animation below is a comprehensive architectural overview of the Platform.
+      .row.align-center
+        .columns.small-12
+          video#vid-platform-diagram.html5-video-full-width autoplay="" loop="" muted="" playsinline="" poster="https://images.contentful.com/189dvqdsjh46/22M5QwAz0EAuuqyigwgKc6/5193b08c622f99caf35eaccb4bc85799/Datica_Platform_Diagram_animation_2018_poster.png"
+            source src="https://videos.contentful.com/189dvqdsjh46/6FV36Yd2JqYgCIgwGucKAm/ea208e44be2fbed57849c51db0bf5233/Datica_Platform_Diagram_animation_2018_02.m4v" type="video/mp4"
 
 section#tech-features.section-article.container-gray-12
   .row.align-center
@@ -76,16 +96,16 @@ section#tech-features.section-article.container-gray-12
           .column.feature-item
             - if feature.has_key?('desc')
               h4.headline-5
-                a.is-toggle data-toggle="feature-detail_#{feature.slug}" 
+                a.is-toggle data-toggle="feature-detail_#{feature.slug}"
                   = feature.title
-                  svg.icon-inline.icon-toggle.svg-color--blue.icon.icon-plus-disc id="feature-icon-#{feature.slug}" style=("margin-bottom: 0.03em;") 
-                    use.symbol-icon xlink:href="#icon-chevron-down" 
+                  svg.icon-inline.icon-toggle.svg-color--blue.icon.icon-plus-disc id="feature-icon-#{feature.slug}" style=("margin-bottom: 0.03em;")
+                    use.symbol-icon xlink:href="#icon-chevron-down"
             - else
               h4.headline-6= feature.title
             - if feature.has_key?("summary")
               = Kramdown::Document.new(feature.summary).to_html
             - if feature.has_key?("desc")
-              .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}" 
+              .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}"
                 = Kramdown::Document.new(feature.desc).to_html
 
 section#tech-integration.section-article
@@ -117,18 +137,6 @@ section#tech-integration.section-article
         We open sourced our Mirth HL7 transformations used over the past three years. With OCI Mirth, you can get started today using these tools. Or, should you require help integrating into a specific hospital, we offer professional services to project manage an integration to completion.
 
       = partial "partials/snippets/button", :locals => { :label => "Test out your own version of Mirth today", :url => "/pricing", :button_classes => "button text-center", :icon => "icon-chevron-right", :icon_color => "white" }
-  hr.divider/
-  .row.align-center
-    .columns.small-12.large-6
-      h3.headline-4.text-center Sansoro Health Emissary ®
-      markdown:
-        Sansoro Health Emissary(R)
-        Emissary is an elegant approach to data interoperability that is unique and proven.
-        {: .lead}
-
-        Customers can choose to deploy Emissary as a new environment into their Datica Platform account. Datica will manage the infrastructure compliance and security, while Sansoro is available to support the Emissary product experience itself.
-
-      = partial "partials/snippets/button", :locals => { :label => "Contact us to learn more", :url => "/contact", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue" }
 
 section#tech-hcms.section-article
   .row.align-center
@@ -140,7 +148,7 @@ section#tech-hcms.section-article
     .columns.small-12.medium-6.large-4
       p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across all customer environments.
 /! cta
-section#ctaBottom.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]" 
+section#ctaBottom.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
   .row.align-center
     .columns.small-12.medium-10.text-center
       h2.headline-3.group <strong>End-to-end compliance</strong> on AWS and Azure is possible.
@@ -156,7 +164,7 @@ section.section-article.container-color--gray-light
     .columns.small-12.large-8.group
       h3.headline-3 Platform Technical Capabilities
       markdown:
-        Datica supports two primary methods of getting your software running on the Platform: [Buildpacks](#) with `git push`, and [Container Services](#) with `datica deploy`. Between these two methods, Datica can support almost any technology imaginable on the application layer. When it comes to services with volumes, we're a bit more prescriptive, given how automatic backups and disaster recovery works. 
+        Datica supports two primary methods of getting your software running on the Platform: [Buildpacks](#) with `git push`, and [Container Services](#) with `datica deploy`. Between these two methods, Datica can support almost any technology imaginable on the application layer. When it comes to services with volumes, we're a bit more prescriptive, given how automatic backups and disaster recovery works.
         {:.lead}
   .row.align-center
     .columns.small-12.medium-4.large-4
@@ -219,4 +227,3 @@ section#faq-tech.section-article
       hr.divider/
       p.lead Get started with the Datica platform today
       = partial "partials/snippets/button", :locals => { :label => "Learn about integrations", :url => "/pricing", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue" }
-
