--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -76,7 +76,7 @@ section.container-color--dark-alt style=("background-color: #23272C")
           p.text-center.group See where each piece of the Platform fits, from logging and monitoring, to networking and load balancing. The animation below is a comprehensive architectural overview of the Platform.
       .row.align-center
         .columns.small-12
-          video#vid-platform-diagram.html5-video-full-width autoplay="" loop="" muted="" playsinline="" poster="https://images.contentful.com/189dvqdsjh46/22M5QwAz0EAuuqyigwgKc6/5193b08c622f99caf35eaccb4bc85799/Datica_Platform_Diagram_animation_2018_poster.png"
+          video#vid-platform-diagram.html5-video-full-width.drop--big autoplay="" loop="" muted="" playsinline="" poster="https://images.contentful.com/189dvqdsjh46/22M5QwAz0EAuuqyigwgKc6/5193b08c622f99caf35eaccb4bc85799/Datica_Platform_Diagram_animation_2018_poster.png"
             source src="https://videos.contentful.com/189dvqdsjh46/6FV36Yd2JqYgCIgwGucKAm/ea208e44be2fbed57849c51db0bf5233/Datica_Platform_Diagram_animation_2018_02.m4v" type="video/mp4"
 
 section#tech-features.section-article.container-gray-12
