--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -82,31 +82,40 @@ section.container-color--dark-alt style=("background-color: #23272C")
 section#tech-features.section-article.container-gray-12
   .row.align-center
     .columns.small-12.text-center.group
-      h2.headline-4.spaced-out Datica Platform Features
+      .row.align-center
+        .columns.small-12.medium-8
+          h1.headline-2.text-center Datica Platform Features
+          p.text-center Features that not only show you how to be compliant, but actually make you compliant against the industries most stringent security requirements.
   - ordered_feature_categories = data.site.featureCategories.to_a.sort_by{ |id, featureCat| featureCat['sort_order'] }
   - ordered_feature_categories.each do | id, featureCat |
     .row
-      .columns.small-12.large-8
-        h3.headline-43= featureCat["title"]
-        - if featureCat.has_key?("desc")
-          p.lead= featureCat["desc"]
-    .row.small-up-1.medium-up-2.large-up-3.xlarge-up-3.group--2x
-      - if featureCat.has_key?("related_features")
-        - featureCat["related_features"].each do | feature |
-          .column.feature-item
-            - if feature.has_key?('desc')
-              h4.headline-5
-                a.is-toggle data-toggle="feature-detail_#{feature.slug}"
-                  = feature.title
-                  svg.icon-inline.icon-toggle.svg-color--blue.icon.icon-plus-disc id="feature-icon-#{feature.slug}" style=("margin-bottom: 0.03em;")
-                    use.symbol-icon xlink:href="#icon-chevron-down"
-            - else
-              h4.headline-6= feature.title
-            - if feature.has_key?("summary")
-              = Kramdown::Document.new(feature.summary).to_html
-            - if feature.has_key?("desc")
-              .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}"
-                = Kramdown::Document.new(feature.desc).to_html
+      .columns.small-12
+        .callout.drop
+          .row
+            .columns.small-12.medium-8
+              h3.headline-4 <strong> #{featureCat["title"]} </strong>
+              - if featureCat.has_key?("desc")
+                p = featureCat["desc"]
+          .row
+            .columns.small-12
+              hr.no-margin-top
+          .row.small-up-1.medium-up-2.large-up-3.xlarge-up-3.group--2x.no-margin-all-the-things
+            - if featureCat.has_key?("related_features")
+              - featureCat["related_features"].each do | feature |
+                .column.feature-item
+                  - if feature.has_key?('desc')
+                    h4.headline-5
+                      a.is-toggle data-toggle="feature-detail_#{feature.slug}"
+                        = feature.title
+                        svg.icon-inline.icon-toggle.svg-color--blue.icon.icon-plus-disc id="feature-icon-#{feature.slug}" style=("margin-bottom: 0.03em;")
+                          use.symbol-icon xlink:href="#icon-chevron-down"
+                  - else
+                    h4.headline-6= feature.title
+                  - if feature.has_key?("summary")
+                    = Kramdown::Document.new(feature.summary).to_html
+                  - if feature.has_key?("desc")
+                    .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}"
+                      = Kramdown::Document.new(feature.desc).to_html
 
 section#tech-integration.section-article
   .row.align-center.text-center
