--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -147,15 +147,23 @@ section#tech-integration.section-article
 
       = partial "partials/snippets/button", :locals => { :label => "Test out your own version of Mirth today", :url => "/pricing", :button_classes => "button text-center", :icon => "icon-chevron-right", :icon_color => "white" }
 
-section#tech-hcms.section-article
-  .row.align-center
-    .columns.small-12.text-center.group
-      h2.headline-3.nomargin Healthcare Compliance Management System
-  .row.align-center
-    .columns.small-12.medium-6.large-7
-      img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/3wzJLEqLHqs4kC2cAk4Msq/1131a6ae3d921e934fa8effa21802b35/hcms-dashboard.png?w=1200" /
-    .columns.small-12.medium-6.large-4
-      p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across all customer environments.
+.container-color--gray-light
+  .container-image--center(data-interchange="[/public/icons/inlined/art/hcms-bg.svg, small]")
+    section.section-article
+      .row.align-center
+        .columns.small-12.text-center.group
+          h2.headline-4.spaced-out Healthcare Compliance Management System
+      .row.align-center
+        .columns.small-12.text-center.group
+          h2.headline-3.nomargin Exposing critical compliance controls
+      .row.align-center.align-middle
+        .columns.small-12.medium-6.large-7
+          img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png" /
+          .callout.drop
+            p.lead.highlight.text-center Continuous <strong>compliance</strong>, delivered.
+            p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across customer environments.
+            p The HCMS is shipping with initial versions of our Licensed Platform. To learn more about the HCMS, <a href="/contact">schedule time to talk with us today</a>.
+
 /! cta
 section#ctaBottom.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
   .row.align-center
