Added shared responsibility image

--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -51,7 +51,10 @@ section.container-color--dark-alt style=("background-color: #23272C")
 section.section-article.container-color--dark-alt
   .row.group.align-center
     .columns.small-12
-      h2.headline-3.group.text-center.spaced-out Understanding Shared Responsibility   
+      h2.headline-3.group.text-center.spaced-out Understanding Shared Responsibility
+  .row
+    .columns.small-12
+      img.group alt=("Shared Responsibility") src="https://images.contentful.com/189dvqdsjh46/1mArNk3AccoEASMwSGkYsa/d92f9e24098115f59e54b9232f795287/shared-responsibility-model-2x.png" /
   .row.align-center
     .columns.small-12.medium-5
       .callout.callout--dark-alpha
@@ -98,7 +101,9 @@ section.section-article
   .row.group.align-center
     .columns.small-12.text-center
       h2.headline-3 General Data Protection Regulation
-      p.lead Datica is ready for GDPR on May 25th.
+      /
+        p.lead Datica is ready for GDPR on May 25th. -> Good practices for Life Sciences on the Cloud
+      p.lead Good practices for Life Sciences on the Cloud
   .row.align-center
     .columns.small-12.medium-6.large-4.medium-order-2
       img.group alt=("GDPR Ready") src="https://images.contentful.com/189dvqdsjh46/6L09pVF6a4uAY00QMqSOYg/a99648672cbc3279925bf2fa7e146fd6/gdpr-ready-badge-text.png" /
@@ -124,6 +129,37 @@ section.section-article
         [Learn more about GxP](/academy/gxp-and-business-associates-does-it-exist-like-hipaa).
     .columns.small-12.medium-6.large-4
       img.group alt=("GxP Ready") src="https://images.contentful.com/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" /
+
+.container-color--gray-light
+  section.section-article
+    .row.align-center
+      .columns.small-12.large-6.text-center.group
+        h2.headline-3 Open sourced company policies give healthcare organizations a headstart
+    .row.align-center
+      .columns.small-12.medium-6.large-5
+        h4.headline-4 What people are saying about Datica’s Open Source Policies
+        div
+          p "We believe that for Datica to open source these documents is truly ground breaking in healthcare IT.
+          p In the past we’ve spent an enormous amount of funds creating &amp; updating our policies. We have yearly evaluations of our policies in October and this past October (2014) we were able to update and implement a number of improvements to our existing policies all based off the information we gathered from Datica's policies. This cost us zero dollars in comparison to our expensive updating of policies in prior years.
+          p This is definitely the first time we have seen policies open sourced and we applaud the use of tools like GitHub to manage version control of all policies.
+          p I think this could be revolutionary in helping the industry as a whole collaborate to improve privacy and security practices by gathering information from the highest level security/privacy experts in the field and making it available via similar open source methods.”
+        .media-object.card-person
+          .media-object-section
+            img.avatar.avatar--large.circle alt=("Katelyn Gleason") src="https://images.contentful.com/189dvqdsjh46/2gYOoWVhOEYW4IMAOIeyS0/599f8ca6d3642c732f3f003769563781/headshot-eligible.jpg?w=128" /
+          .media-object-section.main-section.align-self-middle
+            h4.person-name Katelyn Gleason
+            p.person-title CEO &amp; Cofounder, Eligible Inc.
+      .columns.small-12.medium-6.large-5
+        .callout.drop
+          h4.headline-4 We’re dedicated to making the industry better
+          p In 2014 Datica open sourced our company policies under a a CC BY-SA 4.0 license. Since then the response has been overwhelmingly positive—we have had more activity on GitHub than governmental institutions like the FDA. Along the way we’ve helped hundreds of businesses get started by eliminating this portion of HIPAA compliance as a burden.
+          p Our policies have been written with modern, cloud-based technology vendors in mind. We looked far and wide for policy examples that fit our company, and couldn’t find any. So we wrote our own. Importantly, these policies have been through multiple external audits—two HIPAA audits and one HITRUST audit.
+          p Do you handle PHI and not yet have your own company policies in place? Then you’ll find our content useful.
+          p
+            a.button.hollow href="/open-source/policies"
+              | Policies Overview
+              i.fa.fa-icon.fa-angle-right
+
 
 aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
   .row.align-center
