Making some updates to mirth section, other improvements from asana

--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -29,9 +29,7 @@ nav.hide-for-large.pad--sm.container-color--blue-alt
     .row
       .columns.small-12.medium-5
         h1.headline-2 End-to-end compliance on AWS and Azure is possible.
-        p.small
-          | The Datica Platform fills the compliance gaps on top of public clouds like AWS and Azure by combining the best technology available and mapping it to frameworks like HIPAA, HITRUST, GDPR, and GxP. Customers use Kubernetes-enabled orchestration to deploy containerized workloads to the Platform that are
-          strong guaranteed to be continuously compliant.
+        p.small The Datica Platform fills the compliance gaps on top of public clouds like AWS and Azure by combining the best technology available and mapping it to frameworks like HIPAA, HITRUST, GDPR, and GxP. Customers use Kubernetes-enabled orchestration to deploy containerized workloads to the Platform that <strong>are guaranteed to be continuously compliant</strong>.
         = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white" }
       .columns.small-12.medium-7
         img.float-right-on-medium alt=("Datica Platform Architecture") src="https://images.contentful.com/189dvqdsjh46/6vT9Mx9TlmoEAiGcOkwG24/b4f31fda3c1b6fcd6aeb5f926ce3979a/platform_iso_architecture-2x.png"
@@ -123,25 +121,18 @@ section.section-article.container-color--dark-alt
     section.section-article
       .row.align-middle.align-center
         .columns.small-12.medium-8
-          h2.headline-3.text-center
+          h2.headline-3.text-center.group
             | You wouldn't build payment processing infrastructure to charge credit cards.
             br/
             | You'd use Stripe.
       .row.align-middle.align-center
         .columns.small-12.medium-8
-          .row.align-middle.align-center
+          .row.align-center
             .columns.small-12.medium-6
               p.lead.group <strong>So why waste money and take on unnecessary risk building your own compliance layer?</strong>
               p Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.
-              img.logo-size--xlarge alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
             .columns.small-12.medium-6
-              ul.group
-                li
-                  a.link--white href="#" Shared Responsibility overview
-                li
-                  a.link--white href="#" Explanation of what the Platform does on top of AWS
-                li
-                  a.link--white href="#" Total Cost of Ownership guide vs. building something similar yourself on AWS
+              img.logo-size--xlarge.group alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
               .group
                 = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/discover/aws-hipaa", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }
 
