More small fixes

--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -155,7 +155,7 @@ section.section-article.container-color--gray-light
           li VPN management
     .columns.small-12.large-6
       .callout.drop
-        p We open sourced our Mirth HL7 transformations used over the past three years. With OCI Mirth, you can get started today using these tools. Or, should you require help integrating into a specific hospital, we offer professional services to project manage an integration to completion.
+        p We open sourced our <a href="https://github.com/daticahealth/Mirth-Transforms">Mirth HL7 transformations</a> used over the past three years. With OCI Mirth, you can get started today using these tools. Or, should you require help integrating into a specific hospital, we offer professional services to project manage an integration to completion.
         = partial "partials/snippets/button", :locals => { :label => "Test out your own version of Mirth today", :url => "/pricing", :button_classes => "button text-center", :icon => "icon-chevron-right", :icon_color => "white" }
 
 .container-color--gray-light
@@ -166,7 +166,7 @@ section.section-article.container-color--gray-light
           h2.headline-4.spaced-out Healthcare Compliance Management System
       .row.align-center
         .columns.small-12.text-center.group
-          h2.headline-3.nomargin Exposing critical compliance controls
+          h2.headline-3.nomargin Extending critical compliance controls
       .row.align-center.align-middle
         .columns.small-12.medium-6.large-7
           img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png" /
