--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -174,7 +174,7 @@ section#tech-hcms.section-article.container-color--dark-grad-blue
           h2.headline-4.spaced-out Healthcare Compliance Management System
       .row.align-center
         .columns.small-12.text-center.group
-          h2.headline-3.nomargin Exposing critical compliance controls
+          h2.headline-3.nomargin Extending critical compliance controls
       .row.align-center.align-middle
         .columns.small-12.medium-6.large-7
           img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png" /
