Rounding out AWS page feedback

--- a/source/platform/aws.html.slim
+++ b/source/platform/aws.html.slim
@@ -38,13 +38,13 @@ section.container-color--dark-alt style=("background-color: #23272C")
         p Information security and compliance is always a shared responsibility among many partners. When you work with Datica we're sharing the responsibility of compliance and data protection with you. This also extends to our relationship with AWS. Our Business Associate Agreement with AWS defines the lines of risk between the two companies. This is also the case with the BAA you sign with us. See the diagram below to get a picture of where each parties responsibilities lie.
     .row.align-center
       .columns.small-12
-        img.group src="https://images.contentful.com/189dvqdsjh46/1bottJswv0ASw8QOM66iqA/3be8a09da4cf9d64792341db89c8b70d/01-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
+        img.group src="https://images.contentful.com/189dvqdsjh46/29BoNcw4mIyegeOMWeUCCe/a85854be71b3e543caa184e2f4b6813d/01-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
     .row.align-center
       .columns.small-12.medium-6
         p Essentially AWS will take on the risk of securing the physical infrastructure. They ensure no one will run into a datacenter and run out the door with a server containing PHI. This is a key responsibility in the shared model. However, this doesn’t get you much in the way of HIPAA compliance.
     .row.align-center
       .columns.small-12.medium-9
-        img.group src="https://images.contentful.com/189dvqdsjh46/5FlerlFow8smWSuYeS8Ews/e75d0ca0fbc5667a56cce363eee0d996/02-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
+        img.group src="https://images.contentful.com/189dvqdsjh46/tiBtuipAOWeSkcuMcocU8/0be65195dafc8b2de669345a3e4dda6e/02-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
     .row.align-center
       .columns.small-12.medium-6
         p Compliance is multi-faceted with many layers of responsibility. Without Datica, you'll be responsible for the entirety of compliance. From the cloud infrastructure layer to the application layer and beyond.
@@ -69,10 +69,10 @@ section style=("background-color: #FFF")
       .row.align-center
         .columns.small-12.medium-10.large-8.text-center
           h1.headline-2.group.text-center Datica & AWS
-          p.group By relying on AWS to provide physical infrastructure compliance, and Datica to provide the rest, you'll be 100% HIPAA compliant on the cloud. You'll still be responsible for the majority of application level and administrative compliance. However, Datica even helps there. Our <a href="https://datica.com/open-source/policies/">open source policies</a> are completely free to use and have been audited against HIPAA and HITRUST several times.
+          p.group By relying on AWS to provide physical infrastructure compliance, and Datica to provide the rest, you'll be 100% HIPAA compliant at the infrastructure level. You'll still be responsible for the majority of application level and administrative compliance. However, Datica even helps there. Our <a href="https://datica.com/open-source/policies/">open source policies</a> are completely free to use and have been audited against HIPAA and HITRUST several times.
       .row.align-center
         .columns.small-12.medium-8
-          img.group src="https://images.contentful.com/189dvqdsjh46/27N9stF1YwC4QoKmmY4uYy/e59d45c9c35ad812c6ebe65eaefddff0/05-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
+          img.group src="https://images.contentful.com/189dvqdsjh46/ZbmaDZgpmmWwmQwQ0coW6/1b50c5d5258c3bcb4cebd149512c1164/05-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
       .row.row--card-grid
         .columns.small-12.medium-12.large-4
           .card.drop
