--- a/source/assets/scss/modules/nav.scss
+++ b/source/assets/scss/modules/nav.scss
@@ -17,7 +17,10 @@ $duration: $timing-default * 1.5; //settings.scss:281
 }
 .main-header {
     // Could possibly opt for 2rem here
-    padding: rem-calc(30px);
+    #topNavCTA{
+      padding: 0.5rem 1rem;
+    }
+    padding: 1.2rem 1.8rem;
     position: relative;
     // Not using flexbox on this nav (at least not right now)
     @include clearfix;
@@ -73,7 +76,7 @@ $duration: $timing-default * 1.5; //settings.scss:281
             height: rem-calc(40px);
             background-size: rem-calc(99px) rem-calc(40px);
         }
-        .menu-item--simple { 
+        .menu-item--simple {
             color: white;
             &:hover {
                 color: $gray-9;
