--- a/source/assets/scss/modules/type.scss
+++ b/source/assets/scss/modules/type.scss
@@ -267,6 +267,9 @@ h4.caret-header{
     color: $color_deep;
     background-color: $color_yellow-glow;
 }
+.highlight-pad{
+  padding: 1rem;
+}
 ul.large-list{
     list-style: none;
     margin: 0;
