--- a/source/assets/scss/views/pricing.scss
+++ b/source/assets/scss/views/pricing.scss
@@ -17,7 +17,9 @@ $tab-border: 5px;
         padding-left: 0.3em;
     }
 }
-
+.headline-1, .headline-2{
+  font-weight: 200;
+}
 .tier {
     $glow-r: 20px;
     $glow-o: 0.4;
@@ -89,4 +91,50 @@ ul#pricing-tabs {
             }
         }
     }
+}
+ul.no-style{
+  list-style: none;
+}
+.pill-best{
+  @include border-radius(0.2rem);
+  position: absolute;
+  background-color: $color_green;
+  padding: 0.2rem 0.3rem;
+  text-align: center;
+  color: $color_white;
+  text-transform: uppercase;
+  font-size: rem-calc(10px);
+  font-weight: $font-weight-bold;
+  top: 5px;
+  left: 0;
+}
+
+.pill-new{
+  @extend .pill-best;
+  background-color: $color_prime-alt;
+}
+
+.revert-has-tip{
+  display: inline;
+}
+ul.border-ul{
+  list-style: none;
+  margin-left: 0;
+  li{
+    display: inline-block;
+    padding: 0 0 0.5rem 0;
+    margin: 0 0 0.5rem 0;
+    border-bottom: 1px solid $color_light;
+    &:last-of-type{
+      padding: 0;
+      margin: 0;
+      border-bottom: 0;
+    }
+  }
+}
+
+.custom-pass-through-list{
+  li{
+    font-size: 0.875rem;
+  }
 }
