--- a/source/partials/snippets/_header.erb
+++ b/source/partials/snippets/_header.erb
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="a dropdown-container" id="customerDropdown">
-            <span class="selector">Customers
+            <span class="selector">Help
                     <%= inline_svg("small/icon-triangle-down", class: "dropdown-pip icon-inline") %>
 
             </span>
@@ -87,6 +87,7 @@
                 </div>
             </div>
         </div>
+        <a href="https://product.datica.com" class="menu-item--simple" target="_blank">Sign in</a>
         <a href="/contact" id="topNavCTA" class="button <% if defined?(style) && style == "light" %> button hollow-inverted<% else %> success<% end %>">Contact us</a>
     </nav>
     <div class="mobile-menu">
