--- a/source/demo/index.html.erb
+++ b/source/demo/index.html.erb
@@ -20,7 +20,7 @@ layout: basic
             </div>
             <div class="columns small-12 medium-6 position-relative split-section-form">
                 <div class="callout callout--large drop" id="absoluteForm">
-                    <p>A Datica expert will follow up show you a demo of the Platform</p>
+                    <p class="lead">Someone from Datica will follow up to schedule a time for your demo.</p>
                     <hr/>
                     <!--[if lte IE 8]>
                     <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
