GxP content draft

--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -111,13 +111,12 @@ section.section-article
   .row.group.align-center
     .columns.small-12.text-center
       h2.headline-3 GxP
-      p.lead (subhead)
   .row.align-center
     .columns.small-12.medium-6.large-6
       markdown:
-        The European Union has created a new authoritative regulation on consumer data called GDPR. Fines start being handed out on May 25th, 2018. The regulation applies to all EU citizens regardless of service or where the data lives. Protected Health Information (PHI) is scoped within GDPR, so any healthcare organization who might service European Union citizens will be affected by it.
+        GxP stands for “Good Practice” and is a set of operational controls for Life Sciences organizations working within the confines of the FDA.
 
-        Are you ready? Datica has gone through the necessary audits to ensure it is compliant with the regulation.
+        The FDA publishes its regulations on the back of NIST, which is why GxP largely follows NIST standards. There is no one authoritative documentation source for GxP, like we have the [2013 Omnibus for HIPAA](/discover/hipaa-compliance/) or Articles from the European Union on [GDPR](/discover/gdpr/). Instead, GxP is an industry-accepted definition of best practices mapped to FDA regulations.
 
         [Learn more about GxP](/academy/gxp-and-business-associates-does-it-exist-like-hipaa).
     .columns.small-12.medium-6.large-4
